# logger-tg-notifier

./: justfile  pyproject.toml
.github/workflows/: lint-and-test.yml
src/: server.py
src/bot/: telegram_bot.py
src/endpoints/: __init__.py  health_endpoint.py  log_endpoint.py
src/helpers/: escape_markdown_v2.py  parse_context.py
src/loggertgnotifier/: server.py  settings.py
src/loggertgnotifier/bot/: telegram_bot.py
src/loggertgnotifier/endpoints/: log_endpoint.py
src/loggertgnotifier/helpers/: escape_markdown_v2.py  parse_context.py
src/loggertgnotifier/service/: message_service.py
src/service/: message_service.py
src/tests/: test_error_send.py
tests/: test_error_send.py
