[tool.pdm]
distribution = true

[project]
name = "logger-tg-notifier"
version = "0.0.1"
description = "logger-tg-notifier for esclient"
authors = [
    {name = "esclient"},
]
dependencies = [
    "python-telegram-bot>=22.5",
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
    "pydantic-settings>=2.11.0",
    "aiohttp>=3.13.0",
]
requires-python = "==3.13.7"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
run-server = "logger_tg_notifier.server:main"

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "black==25.9.0",
    "isort==6.0.1",
    "flake8==7.3.0",
    "flake8-pyproject==1.2.3",
    "ruff==0.13.2",
    "mypy==1.18.2",
]
