[tool.pdm]
distribution = true

[tool.black]
line-length = 79
target-version = ["py313"]
skip-string-normalization = false
exclude = '''
/(
  \.git
  | \.hg
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["app"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".venv"]

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:T20,ARG001"
]
exclude = [
  ".venv",
  "__pycache__",
  "build",
  "dist",
]

[tool.ruff]
line-length = 79
target-version = "py313"
preview = true
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "UP",
    "SIM",
    "T20",
    "ARG",
    "C4",
    "RUF"
]
ignore = [
    "E203",
    "B008",
    "SIM105",
    "RUF001",
    "RUF100"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20", "ARG001"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
explicit_package_bases = true
mypy_path = ["src"]
plugins = ["pydantic.mypy"]

[project]
name = "logger-tg-notifier"
version = "0.0.1"
description = "logger-tg-notifier for esclient"
authors = [
    {name = "esclient"},
]
dependencies = [
    "python-telegram-bot>=22.5",
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
    "pydantic-settings>=2.11.0",
    "aiohttp>=3.13.0",
]
requires-python = "==3.13.1"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
run-server = "loggertgnotifier.server:main"

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "black==25.9.0",
    "isort==6.0.1",
    "flake8==7.3.0",
    "flake8-pyproject==1.2.3",
    "ruff==0.13.2",
    "mypy==1.18.2",
]
